Cart overflow issue is fixed

--- a/client/src/components/organisms/cart-dropdown/style.scss
+++ b/client/src/components/organisms/cart-dropdown/style.scss
@@ -176,6 +176,28 @@
     }
   }
 
+  .cart-dropdown-items-overflow-hidden {
+    width: 100%;
+    max-height: 53vh;
+    padding-right: get-vw(28px);
+    overflow: hidden;
+    // box-shadow: inset 0 -10px 15px -13px black;
+
+    @media screen and (max-width: 768px) {
+      width: getmb-vw(325px);
+      box-shadow: none;
+    }
+
+    .no-item {
+      padding: get-vw(20px);
+      background-color: #013a4e;
+      color: #fff;
+      font-family: $OpenSans;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+
   .cart-dropdown-checkout-container {
     display: flex;
     justify-content: flex-end;
